RIPE NCC has merged 953ef97
* Pass in exact createdAt value where available [5d4a69c6]
* Use rpki-commons implementation of object time parsing [12750355]
* add PrivateAsnsUsedException [4d64424c]
* Skip stacktrace for two more error situations [79fe45f5]
* Do not log stacktrace for EntityTagDoesNotMatch and PreconditionRequired exceptions [eee53915]
* Fix sonar nit by using Object::toString [f810f7e8]
* Fix broken tests [ec4e8129]
* Address some code smells [5e3997ef]
* Prevent controller from running certain operations. [5c832754]
* This is to change RSNG resource-service monitoring URL [ff2a902d]
* Minimal fix to avoid "wrong button" click in the Ustream CA UI [0e92676f]
* Don't recalculate current time [03f91b3c]
* Update plugin org.springframework.boot to v2.7.18 [1fcdb70d]
* Exclude ncipher/thales from public repositories. [f6e1ce9f]
* Fix location of thymeleaf templates in local profile [47bee4ca]
* Make error message a bit better [9f5eef99]
* Fix tests [17eef53d]
* Fixing more code smells [e67b420f]
* Fix tests [0814b06c]
* Try to cater for sonarcube [c0db3caa]
* Use existing ROA configuration instead of existing ROA objects to validate [c39fea0c]
* Fix server crash when submitting duplicate ROAs. [f6d982bd]
* Code smell [b5733066]
* Remove some code smells. [0c8ab8b4]
* Fix test name [5be56abf]
* Add validation to "stage", fix broken test. [8fd13940]
* Add a comment [711f3089]
* Add validation to "api/publish" REST call [057f3f38]
* Add Utils.validateNoIdenticalROAs [c18156df]
* rename variable and log ASPA when reissuing [aa795c4e]
* Only force configuration check on nonhosted CAs [b9769f23]
* Fix sonarqube warning [cfb6933e]
* Move some validation of updates to command handler [1d5a7593]
* Junit5 API in test case [33aff947]
* Ignore a test [f06fa879]
* Do not issue for AspaConfigurations without providers [3d6f7dac]
* Do not create AspaEntities without providers [8047d022]
* Add failing test for AspaEntity with empty provider AS [2e94165f]
* ASPAs where t