@@ -3,12 +3,11 @@ package net.ripe.rpki.server.api.commands;
 
 import net.ripe.ipresource.Asn;
 import net.ripe.rpki.commons.util.VersionedId;
-import net.ripe.rpki.server.api.dto.AspaAfiLimit;
 import net.ripe.rpki.server.api.dto.AspaConfigurationData;
-import net.ripe.rpki.server.api.dto.AspaProviderData;
 import org.junit.Test;
 
 import java.util.Collections;
+import java.util.List;
 
 import static org.assertj.core.api.Assertions.assertThat;
 
@@ -21,10 +20,10 @@ public class UpdateAspaConfigurationCommandTest {
             "etag",
             Collections.singletonList(new AspaConfigurationData(
                 Asn.parse("AS13"),
-                Collections.singletonList(new AspaProviderData(Asn.parse("AS1234"), AspaAfiLimit.ANY))
+                List.of(Asn.parse("AS1234"))
             ))
         );
 
-        assertThat(command.getCommandSummary()).isEqualTo("Update ASPA configuration to: AS13 -> AS1234 [ANY].");
+        assertThat(command.getCommandSummary()).isEqualTo("Update ASPA configuration to: AS13 -> AS1234.");
     }
 }
