@@ -1,5 +1,6 @@
 package net.ripe.rpki.services.impl.handlers;
 
+import com.google.common.collect.ImmutableSortedSet;
 import net.ripe.ipresource.Asn;
 import net.ripe.ipresource.ImmutableResourceSet;
 import net.ripe.rpki.commons.util.VersionedId;
@@ -8,22 +9,17 @@ import net.ripe.rpki.domain.ManagedCertificateAuthority;
 import net.ripe.rpki.domain.aspa.AspaConfiguration;
 import net.ripe.rpki.domain.aspa.AspaConfigurationRepository;
 import net.ripe.rpki.server.api.commands.UpdateAspaConfigurationCommand;
-import net.ripe.rpki.server.api.dto.AspaAfiLimit;
 import net.ripe.rpki.server.api.dto.AspaConfigurationData;
-import net.ripe.rpki.server.api.dto.AspaProviderData;
 import net.ripe.rpki.server.api.services.command.CommandWithoutEffectException;
-import net.ripe.rpki.server.api.services.command.DuplicateResourceException;
+import net.ripe.rpki.server.api.services.command.IllegalResourceException;
 import net.ripe.rpki.server.api.services.command.EntityTagDoesNotMatchException;
 import net.ripe.rpki.server.api.services.command.NotHolderOfResourcesException;
 import net.ripe.rpki.server.api.services.command.PrivateAsnsUsedException;
-import org.junit.Before;
-import org.junit.Test;
+import org.junit.jupiter.api.BeforeEach;
+import org.junit.jupiter.api.Test;
 import org.mockito.ArgumentCaptor;
 
-import java.util.Arrays;
-import java.util.Collections;
-import java.util.SortedMap;
-import java.util.TreeMap;
+import java.util.*;
 
 import static java.util.Collections.singletonList;
 import static net.ripe.rpki.domain.TestObjects.CA_ID;
@@ -35,7 +31,7 @@ import static org.mockito.Mockito.never;
 import static org.mockito.Mockito.verify;
 import static org.mockito.Mockito.when;
 
-public class UpdateAspaConfigurationCommandHandlerTest {
+class UpdateAspaConfigurationCommandHandlerTest {
     private static final String PRIVATE_ASNS = "64512-65535, 4200000000-4294967294";
     private static final String EMPTY_CONFIGURATION_ETAG = AspaConfigurationData.entityTag(Collections.emptySortedMap());
 
@@ -43,7 +39,7 @@ public class UpdateAspaConfigurationCommandHandlerTest {
     private ManagedCertificateAuthority managedCertificateAuthority;
     private UpdateAspaConfigurationCommandHandler subject;
 
-    @Before
+    @BeforeEach
     public void setUp() {
         CertificateAuthorityRepository certificateAuthorityRepository = mock(CertificateAuthorityRepository.class);
         aspaConfigurationRepository = mock(AspaConfigurationRepository.class);
@@ -56,41 +52,41 @@ public class UpdateAspaConfigurationCommandHandlerTest {
     }
 
     @Test
-    public void should_add_new_customer_asn() {
+    void should_add_new_customer_asn() {
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), EMPTY_CONFIGURATION_ETAG, singletonList(new AspaConfigurationData(
             Asn.parse("AS1234"),
-            singletonList(new AspaProviderData(Asn.parse("AS3"), AspaAfiLimit.IPv4))
+            List.of(Asn.parse("AS3"))
         )));
 
         subject.handle(command);
 
         ArgumentCaptor<AspaConfiguration> aspaConfigurationArgumentCaptor = ArgumentCaptor.forClass(AspaConfiguration.class);
         verify(aspaConfigurationRepository).add(aspaConfigurationArgumentCaptor.capture());
-        assertThat(aspaConfigurationArgumentCaptor.getValue().getProviders()).isEqualTo(Collections.singletonMap(Asn.parse("AS3"), AspaAfiLimit.IPv4));
+        assertThat(aspaConfigurationArgumentCaptor.getValue().getProviders()).isEqualTo(ImmutableSortedSet.of(Asn.parse("AS3")));
         verify(managedCertificateAuthority).markConfigurationUpdated();
     }
 
     @Test
-    public void should_replace_provider_asns_for_matching_customer_asn() {
-        AspaConfiguration aspa_as1234 = new AspaConfiguration(managedCertificateAuthority, Asn.parse("AS1234"), Collections.singletonMap(Asn.parse("AS1"), AspaAfiLimit.ANY));
+    void should_replace_provider_asns_for_matching_customer_asn() {
+        AspaConfiguration aspa_as1234 = new AspaConfiguration(managedCertificateAuthority, Asn.parse("AS1234"), ImmutableSortedSet.of(Asn.parse("AS1")));
         SortedMap<Asn, AspaConfiguration> aspaCo = new TreeMap<>();
         aspaCo.put(aspa_as1234.getCustomerAsn(), aspa_as1234);
         when(aspaConfigurationRepository.findByCertificateAuthority(managedCertificateAuthority)).thenReturn(aspaCo);
 
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), AspaConfigurationData.entityTag(entitiesToMaps(aspaCo)), singletonList(new AspaConfigurationData(
             Asn.parse("AS1234"),
-            singletonList(new AspaProviderData(Asn.parse("AS3"), AspaAfiLimit.IPv4))
+            List.of(Asn.parse("AS3"))
         )));
 
         subject.handle(command);
 
-        assertThat(aspa_as1234.getProviders()).isEqualTo(Collections.singletonMap(Asn.parse("AS3"), AspaAfiLimit.IPv4));
+        assertThat(aspa_as1234.getProviders()).isEqualTo(ImmutableSortedSet.of(Asn.parse("AS3")));
         verify(managedCertificateAuthority).markConfigurationUpdated();
     }
 
     @Test
-    public void should_remove_customer_asn() {
-        AspaConfiguration aspa_as1234 = new AspaConfiguration(managedCertificateAuthority, Asn.parse("AS1234"), Collections.singletonMap(Asn.parse("AS1"), AspaAfiLimit.ANY));
+    void should_remove_customer_asn() {
+        AspaConfiguration aspa_as1234 = new AspaConfiguration(managedCertificateAuthority, Asn.parse("AS1234"), ImmutableSortedSet.of(Asn.parse("AS1")));
         SortedMap<Asn, AspaConfiguration> aspaCo = new TreeMap<>();
         aspaCo.put(aspa_as1234.getCustomerAsn(), aspa_as1234);
         when(aspaConfigurationRepository.findByCertificateAuthority(managedCertificateAuthority)).thenReturn(aspaCo);
@@ -104,15 +100,15 @@ public class UpdateAspaConfigurationCommandHandlerTest {
     }
 
     @Test
-    public void should_have_no_effect_when_there_are_no_differences() {
-        AspaConfiguration aspa_as1234 = new AspaConfiguration(managedCertificateAuthority, Asn.parse("AS1234"), Collections.singletonMap(Asn.parse("AS1"), AspaAfiLimit.ANY));
+    void should_have_no_effect_when_there_are_no_differences() {
+        AspaConfiguration aspa_as1234 = new AspaConfiguration(managedCertificateAuthority, Asn.parse("AS1234"), ImmutableSortedSet.of(Asn.parse("AS1")));
         SortedMap<Asn, AspaConfiguration> aspaCo = new TreeMap<>();
         aspaCo.put(aspa_as1234.getCustomerAsn(), aspa_as1234);
         when(aspaConfigurationRepository.findByCertificateAuthority(managedCertificateAuthority)).thenReturn(aspaCo);
 
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), AspaConfigurationData.entityTag(entitiesToMaps(aspaCo)), singletonList(new AspaConfigurationData(
             Asn.parse("AS1234"),
-            singletonList(new AspaProviderData(Asn.parse("AS1"), AspaAfiLimit.ANY))
+            List.of(Asn.parse("AS1"))
         )));
 
         assertThatThrownBy(() -> subject.handle(command)).isInstanceOf(CommandWithoutEffectException.class);
@@ -120,78 +116,90 @@ public class UpdateAspaConfigurationCommandHandlerTest {
     }
 
     @Test
-    public void should_notify_aspa_entity_service_on_configuration_change() {
+    void should_notify_aspa_entity_service_on_configuration_change() {
         subject.handle(new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), EMPTY_CONFIGURATION_ETAG, singletonList(new AspaConfigurationData(
             Asn.parse("AS1234"),
-            singletonList(new AspaProviderData(Asn.parse("AS1"), AspaAfiLimit.ANY))
+            List.of(Asn.parse("AS1"))
         ))));
 
         verify(managedCertificateAuthority).markConfigurationUpdated();
     }
     @Test
-    public void should_reject_customer_asn_if_not_certified() {
+    void should_reject_customer_asn_if_not_certified() {
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), EMPTY_CONFIGURATION_ETAG, singletonList(new AspaConfigurationData(
             Asn.parse("AS9000"),
-            singletonList(new AspaProviderData(Asn.parse("AS3"), AspaAfiLimit.IPv4))
+            List.of(Asn.parse("AS3"))
         )));
 
         assertThatThrownBy(() -> subject.handle(command)).isInstanceOf(NotHolderOfResourcesException.class);
     }
 
     @Test
-    public void should_reject_use_of_private_asns_in_providers() {
+    void should_reject_use_of_private_asns_in_providers() {
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), EMPTY_CONFIGURATION_ETAG, singletonList(new AspaConfigurationData(
             Asn.parse("AS1234"),
-            singletonList(new AspaProviderData(Asn.parse("AS64512"), AspaAfiLimit.ANY))
+            List.of(Asn.parse("AS64512"))
         )));
 
         assertThatThrownBy(() -> subject.handle(command)).isInstanceOf(PrivateAsnsUsedException.class);
     }
 
     @Test
-    public void should_reject_duplicate_customer_asns() {
+    void should_reject_duplicate_customer_asns() {
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), EMPTY_CONFIGURATION_ETAG, Arrays.asList(new AspaConfigurationData(
             Asn.parse("AS1234"),
-            singletonList(new AspaProviderData(Asn.parse("AS9"), AspaAfiLimit.ANY))
+            List.of(Asn.parse("AS9"))
         ), new AspaConfigurationData(
             Asn.parse("AS1234"),
-            singletonList(new AspaProviderData(Asn.parse("AS10"), AspaAfiLimit.ANY))
+            List.of(Asn.parse("AS10"))
         )));
 
-        assertThatThrownBy(() -> subject.handle(command)).isInstanceOfSatisfying(DuplicateResourceException.class, exception -> {
-            assertThat(exception.getMessage()).isEqualTo("duplicate ASN in ASPA configuration");
+        assertThatThrownBy(() -> subject.handle(command)).isInstanceOfSatisfying(IllegalResourceException.class, exception -> {
+            assertThat(exception.getMessage()).isEqualTo("duplicate customer ASN in ASPA configuration");
         });
     }
 
     @Test
-    public void should_reject_duplicate_provider_asns() {
+    void should_reject_duplicate_provider_asns() {
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), EMPTY_CONFIGURATION_ETAG, singletonList(new AspaConfigurationData(
             Asn.parse("AS1234"),
-            Arrays.asList(new AspaProviderData(Asn.parse("AS9"), AspaAfiLimit.ANY), new AspaProviderData(Asn.parse("AS9"), AspaAfiLimit.IPv4))
+            List.of(Asn.parse("AS9"), Asn.parse("AS9"))
         )));
 
-        assertThatThrownBy(() -> subject.handle(command)).isInstanceOfSatisfying(DuplicateResourceException.class, exception -> {
-            assertThat(exception.getMessage()).isEqualTo("duplicate ASN in ASPA configuration");
+        assertThatThrownBy(() -> subject.handle(command)).isInstanceOfSatisfying(IllegalResourceException.class, exception -> {
+            assertThat(exception.getMessage()).isEqualTo("duplicate provider ASN in ASPA configuration");
         });
     }
 
     @Test
-    public void should_reject_aspa_when_customer_asn_appears_in_provider_asn() {
+    void should_reject_empty_provider_asns() {
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), EMPTY_CONFIGURATION_ETAG, singletonList(new AspaConfigurationData(
-            Asn.parse("AS1234"),
-            Collections.singletonList(new AspaProviderData(Asn.parse("AS1234"), AspaAfiLimit.ANY))
+                Asn.parse("AS1234"),
+                List.of()
         )));
 
-        assertThatThrownBy(() -> subject.handle(command)).isInstanceOfSatisfying(DuplicateResourceException.class, exception -> {
+        assertThatThrownBy(() -> subject.handle(command)).isInstanceOfSatisfying(IllegalResourceException.class, exception -> {
+            assertThat(exception.getMessage()).isEqualTo("One of the configured ASPAs does not have providers");
+        });
+    }
+
+    @Test
+    void should_reject_aspa_when_customer_asn_appears_in_provider_asn() {
+        UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), EMPTY_CONFIGURATION_ETAG, singletonList(new AspaConfigurationData(
+            Asn.parse("AS1234"),
+            List.of(Asn.parse("AS1234"))
+        )));
+
+        assertThatThrownBy(() -> subject.handle(command)).isInstanceOfSatisfying(IllegalResourceException.class, exception -> {
             assertThat(exception.getMessage()).isEqualTo("customer AS1234 appears in provider set [AS1234]");
         });
     }
 
     @Test
-    public void should_reject_command_if_entity_tag_does_not_match_current_configuration() {
+    void should_reject_command_if_entity_tag_does_not_match_current_configuration() {
         UpdateAspaConfigurationCommand command = new UpdateAspaConfigurationCommand(new VersionedId(CA_ID), "no-match", singletonList(new AspaConfigurationData(
             Asn.parse("AS1234"),
-            singletonList(new AspaProviderData(Asn.parse("AS1"), AspaAfiLimit.ANY))
+            List.of(Asn.parse("AS1"))
         )));
 
         assertThatThrownBy(() -> subject.handle(command)).isInstanceOf(EntityTagDoesNotMatchException.class);
